tests/baselines/reference/unicodeExtendedEscapesInTemplates12_ES5.errors.txt
tests/cases/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInTemplates12_ES5.ts(2,21): error TS1195: An extended Unicode escape value must be between 0x0 and 0x10FFFF inclusive.


==== tests/cases/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInTemplates12_ES5.ts (1 errors) ====
    
    var x = `\u{FFFFFFFF}`;
                        
!!! error TS1195: An extended Unicode escape value must be between 0x0 and 0x10FFFF inclusive.
    